[tool.poetry]
name = "maze-solver-boot-dev"
version = "0.1.0"
description = "This project generates a maze using tkinker for a GUI and solves it using a depth first traversal algorithm"
authors = ["Brent-the-carpenter <beh337@gmail.com>"]
readme = "README.md"
packages = [{include = "maze_solver_boot"}]

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
ruff = "^0.6.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
